--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 footer {
   margin-top: 5px;
   background-color: black;
@@ -11,30 +12,41 @@ footer {
 }
 
 .IndexMainGrid {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
 }
 
 .IndexSectionGrid {
-    display: grid;
-    grid-template-rows: 50vh 100vh;
+  display: grid;
+  grid-template-rows: 50vh 100vh;
 }
 
 .IndexAsideGrid {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
 }
 
 img {
-    max-width: 100%;
-    max-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 ul {
-    background-color: #cccccc;
-    border-radius: 5%;
+  padding: 0;
+  background-color: #cccccc;
+  border-radius: 5%;
 }
 li {
-    background-color: #2f70c5;
-    border-radius: 10px;
+  text-align: center;
+  list-style: none;
+  margin: 10px;
+  height: 20%;
+  background-color: #2f70c5;
+  border-radius: 50px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 4vw;
 }
