--- a/style.css
+++ b/style.css
@@ -33,20 +33,33 @@ img {
 
 ul {
   padding: 0;
-  background-color: #cccccc;
   border-radius: 5%;
 }
 li {
   text-align: center;
   list-style: none;
-  margin: 10px;
-  height: 20%;
-  background-color: #2f70c5;
-  border-radius: 50px;
+  margin-top: 10%;
 }
 
-a {
+li a {
+  padding-left: 5%;
+  padding-right: 5%;
   text-decoration: none;
   color: white;
+  background-color: red;
+  border-radius: 50px;
   font-size: 4vw;
+}
+
+li a:hover {
+  animation: hover 200ms ease-out forwards;
+}
+
+@keyframes hover {
+  from {
+    font-size: 4vw;
+  }
+  to {
+    font-size: 4.5vw;
+  }
 }
