--- a/style.css
+++ b/style.css
@@ -4,31 +4,19 @@ body {
 }
 
 footer {
-  margin-top: 5px;
+  position:absolute;
+  bottom:0;
+  width: 100vw;
+  margin: 0;
   background-color: black;
   color: white;
   text-align: center;
   padding: 5%;
 }
 
-.IndexMainGrid {
+.indexMainGrid {
   display: grid;
-  grid-template-columns: 3fr 1fr;
-}
-
-.IndexSectionGrid {
-  display: grid;
-  grid-template-rows: 50vh 100vh;
-}
-
-.IndexAsideGrid {
-  display: grid;
-  grid-template-rows: 1fr 1fr;
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
+  grid-template-columns: 4fr 1fr;
 }
 
 ul {
@@ -38,7 +26,7 @@ ul {
 li {
   text-align: center;
   list-style: none;
-  margin-top: 10%;
+  margin-top: 1%;
 }
 
 li a {
@@ -62,4 +50,8 @@ li a:hover {
   to {
     font-size: 4.5vw;
   }
+}
+
+img.not_logo {
+  width: 50%;
 }
