--- a/style.css
+++ b/style.css
@@ -4,14 +4,10 @@ body {
 }
 
 footer {
-  position:absolute;
-  bottom:0;
-  width: 100vw;
-  margin: 0;
   background-color: black;
   color: white;
   text-align: center;
-  padding: 5%;
+  padding: 5vw;
 }
 
 .indexMainGrid {
@@ -19,23 +15,37 @@ footer {
   grid-template-columns: 4fr 1fr;
 }
 
+.indexSectionGrid {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.previewGrid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  max-width: 50vw;
+  margin-left: 5vw;
+}
+
 ul {
-  padding: 0;
-  border-radius: 5%;
+  margin-right: 1vw;
+  padding: 2vw;
+  border-radius: 2vw;
 }
 li {
   text-align: center;
   list-style: none;
-  margin-top: 1%;
+  margin-top: 1vw;
 }
 
 li a {
-  padding-left: 5%;
-  padding-right: 5%;
+  padding-left: 2vw;
+  padding-right: 2vw;
   text-decoration: none;
   color: white;
   background-color: red;
-  border-radius: 50px;
+  border-radius: 2.5vw;
   font-size: 4vw;
 }
 
@@ -48,10 +58,14 @@ li a:hover {
     font-size: 4vw;
   }
   to {
-    font-size: 4.5vw;
+    font-size: 4.2vw;
   }
 }
 
-img.not_logo {
-  width: 50%;
+.not_logo {
+  width: 50vw;
+}
+
+.prevImg {
+  padding: 1vw;
 }
