--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ footer {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
   max-width: 50vw;
-  margin-left: 5vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 ul {
@@ -64,8 +65,11 @@ li a:hover {
 
 .not_logo {
   width: 50vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .prevImg {
+  height: 10vw;
   padding: 1vw;
 }
