--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ footer {
 
 .indexMainGrid {
   display: grid;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 3fr 1fr;
 }
 
 .indexSectionGrid {
@@ -29,8 +29,22 @@ footer {
   margin-right: auto;
 }
 
-ul {
+.indexAsideGrid {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  background-color: rgb(223, 223, 223);
+  margin-left: 1vw;
   margin-right: 1vw;
+  border-radius: 1vw;
+  width: 25vw;
+  height: 96vh;
+  position: sticky;
+  top: 2vh;
+}
+
+ul {
+  margin-right: auto;
+  margin-left: auto;
   padding: 2vw;
   border-radius: 2vw;
 }
@@ -38,6 +52,8 @@ li {
   text-align: center;
   list-style: none;
   margin-top: 1vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 li a {
@@ -47,7 +63,7 @@ li a {
   color: white;
   background-color: red;
   border-radius: 2.5vw;
-  font-size: 4vw;
+  font-size: 3.5vw;
 }
 
 li a:hover {
@@ -56,20 +72,22 @@ li a:hover {
 
 @keyframes hover {
   from {
-    font-size: 4vw;
+    font-size: 3.5vw;
   }
   to {
-    font-size: 4.2vw;
+    font-size: 3.8vw;
   }
 }
 
 .not_logo {
-  width: 50vw;
+  height: 30vw;
   margin-left: auto;
   margin-right: auto;
+  border-radius: 2vw;
 }
 
 .prevImg {
   height: 10vw;
   padding: 1vw;
+  border-radius: 2vw;
 }
