--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ footer {
   margin-right: 1vw;
   border-radius: 1vw;
   width: 25vw;
-  height: 96vh;
+  height: 88vh;
   position: sticky;
   top: 2vh;
   padding: 2vw;
@@ -61,23 +61,15 @@ button {
   margin: 1vw;
   border-radius: 5vw;
   color: white;
-  background-color: red;
 }
 
-
+button:hover {
+  animation: hover 200ms forwards;
+}
 
 .buttonGrid {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
-}
-
-@keyframes hover {
-  from {
-    font-size: 3.5vw;
-  }
-  to {
-    font-size: 3.8vw;
-  }
 }
 
 .not_logo {
@@ -91,4 +83,30 @@ button {
   height: 10vw;
   padding: 1vw;
   border-radius: 2vw;
+}
+
+.asideAd {
+  width: 100%;
+  border-radius: 2vw;
+}
+
+.red {
+  background-color: crimson;
+}
+
+.green {
+  background-color: seagreen;
+}
+
+.blue {
+  background-color: rgb(0, 157, 255);
+}
+
+@keyframes hover {
+  from {
+  }
+  to {
+    background-color: white;
+    color: black;
+  }
 }
