--- a/style.css
+++ b/style.css
@@ -159,12 +159,12 @@ h1 {
 
 .search {
   text-align: center;
-  background-color: gray;
-  border-color: black;
-  outline: black;
-  border-width: 2px;
+  color: gray;
+  border-color: black;  
+  border-width: 1px;
+  border-radius: 2vw;
+  border-style: solid;
   margin-left: auto;
   margin-right: auto;
   width: 50vw;
-  border-radius: 2vw;
 }
