--- a/style.css
+++ b/style.css
@@ -174,3 +174,13 @@ h1 {
 	margin-right: auto;
 	width: 50vw;
 }
+
+.asideGrid {
+	background-color: rgb(223, 223, 223);
+	margin-left: 1vw;
+	margin-right: 1vw;
+	margin-bottom: 20vw;
+	border-radius: 1vw;
+	width: 25vw;
+	padding: 2vw;
+}
